# docs/openapi.yaml
@@ -1456,6 +1456,15 @@ components:
         bssid:
           type: string
           example: "00:11:22:33:44:55"
+        freq:
+          type: integer
+          example: 5745
+        keyMgmt:
+          type: string
+          example: WPA3
+        wifiGen:
+          type: string
+          example: WiFi 6
 
     # --- Firewall Policy Schemas ---
     PolicyRule:
